# openptv-python

./: .cruft.json  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  environment.yml  mypy.ini  profile  pyproject.toml  pyptv_gui.desktop~  setup.py
.github/workflows/: documentation.yml  on-push.yml  static.yml
docs/: Makefile  conf.py  index.md  install_pyptv_ubuntu.md  install_pyptv_ubuntu.md.orig  make.bat
docs/add_docs/: Design principles of the new 3D.docx
docs/source/: .intro.txt.swn  .intro.txt.swo  .intro.txt.swp  PTV_files.txt  PTV_tutorial.txt  add_doc.txt  add_soft.txt  add_soft.txt~  api_reference.txt  benchmark.txt  calibration_files.txt  code.txt  conf.py  conf.py~  (+18 more)
openptv_python/: __init__.py  calibration.py  constants.py  correspondences.py  epi.py  find_candidate.py  image_processing.py  imgcoord.py  lsqadj.py  multimed.py  orientation.py  parameters.py  ptv.py  ptv.py.bck  ray_tracing.py  segmentation.py  sortgrid.py  structures.py  test_rotation_matrix.ipynb  track.py  tracking_frame_buf.py  tracking_frame_buf_header.py  tracking_frame_buf_header.txt  tracking_run.py  trafo.py  vec_utils.py
pyptv_gui/: __init__.py  build_mac.py  calibration_gui.py  code_editor.py  demo.py  directory_editor.py  ext_sequence_denis.py  general.py  par2yaml.py  parameter_gui.py  parameters.py  ptv.py  ptv1.py  pyptv_batch.py  pyptv_gui.py  setup.py  test_detections.py  text_box_overlay.py  untitled0.py  yaml2par.py
src_c/: correspondences.c  globals.h  image_processing.c  jw_ptv.c  lsqadj.c  lsqadj.h  multimed.c  orientation.c  orientation.h  peakfitting.c  ptv.h  ptv1.c  ptv1.pyx  segmentation.c  sortgrid.c  track.c  tracking_framebuf.c
tests/: gen_track_data.py  merging_yaml.ipynb  test_00_version.py  test_back_trans_point.py  test_burgers.py  test_burgers.txt  test_cal_ori_par.py  test_calibration_binding.py  test_calibration_class.py  test_calibration_notebook.ipynb  test_calibration_optimization.py  test_calibration_optimize copy.ipynb  test_calibration_optimize.ipynb  test_candsearch_in_pix.ipynb  test_cavity.py  test_classes.ipynb  test_corresp.ipynb  test_corresp.py  test_epipolar.py  test_fb.py  test_framebuf.ipynb  test_framebuf.py  test_get_mmlut.py  test_image_processing.py  test_img_coord.py  test_imgcoord.py  test_init_mmlut.py  test_lsqadj.ipynb  test_lsqadj.py  test_match_pairs.ipynb  test_match_pairs.py  test_memory_stress.py  test_merging_yaml.py  test_multi_plane_par.py  test_multimedia.py  test_multimedia_n_lay.py  test_multimedia_par.py  test_multimedia_r_nlay.ipynb  test_multimedia_r_nlay.py  test_multimedia_r_nlay_2.py  (+36 more)
tests_c/: check_ptv.c
(+344 files in other folders)
